--- a/base/deployment.yaml
+++ b/base/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: demo-app
-          image: ghcr.io/OOsemka/demo-app:latest
+          image: ghcr.io/oosemka/demo-app:latest
           # env:
           # - name: SECRET
           #   valueFrom:
